force-app/main/default/objects/Product_Inventory__c/Product_Inventory__c.object-meta.xml
<CustomObject>
    <label>Product Inventory</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Inventories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>