force-app/main/default/objects/Product_Inventory__c/fields/Inventory_Month__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Month__c</fullName>
    <label>Inventory Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>