force-app/main/default/objects/Product_Inventory__c/fields/Inventory_Year__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Year__c</fullName>
    <label>Inventory Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>