force-app/main/default/objects/Product_Inventory__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product_Item__c</referenceTo>
    <relationshipLabel>Product Inventories</relationshipLabel>
    <relationshipName>Product_Inventories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>