force-app/main/default/objects/Product_Inventory__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Product Inventories</relationshipLabel>
    <relationshipName>Product_Inventories</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>