force-app/main/default/objects/Product_Inventory__c/validationRules/validate_inventory_month.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_inventory_month</fullName>
    <active>true</active>
    <description>Should only be between 1-12</description>
    <errorConditionFormula>OR(Inventory_Month__c &lt; 1, Inventory_Month__c &gt; 12)</errorConditionFormula>
    <errorDisplayField>Inventory_Month__c</errorDisplayField>
    <errorMessage>Invalid month value. It should be between 1-12</errorMessage>
</ValidationRule>