force-app/main/default/objects/Product_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Warehouse__c</columns>
    <columns>Inventory_Month__c</columns>
    <columns>Inventory_Year__c</columns>
    <columns>Current__c</columns>
    <columns>Amount_Available__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>